# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-logistics-env"
version = "0.1.0"
description = "Logistics Env environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
  "openenv-core[core]>=0.2.2",
  "networkx>=3.0",
  "fastmcp>=2.0.0",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-cov>=4.0.0"]

[project.scripts]
server = "logistics_env.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["logistics_env", "logistics_env.server"]
package-dir = { "logistics_env" = ".", "logistics_env.server" = "server" }

[tool.setuptools.package-data]
"logistics_env.server" = ["*.yaml"]

